web/style.css
html, body {
    margin: 0;
    padding: 0;
    border: 0;
    height: 100%;
    background: #1c1d27;
}

a {
    color: #405aff;
    text-decoration: none;
    font: normal normal 12px/14px "Work Sans", sans-serif;
}

.clearfix:after {
    height: 0;
    clear: both;
    content: ".";
    display: block;
    visibility: hidden;
}

.left {
    float: left;
}

.center {
    margin: 0 auto;
}

.right {
    float: right;
}

#main_container {
    height: 100%;
    display: flex;
    overflow: hidden;
    flex-direction: column;
}

.control_bar {
    padding: 8px 10px;
    background: #272936;
}

.control_bar a {
    padding: 6px 8px;
}

.ghost_button {
    border: 0;
    border-radius: 4px;
    color: #aeb0be;
    background: transparent;
    padding: 0;
    margin: 0 2px;
    padding: 6px 12px;
    font: normal normal 12px/14px "Work Sans", sans-serif;
}

.ghost_button:hover {
    background: #343545;
}

.ghost_button:disabled {
    color: #4f5266;
}

.ghost_button:disabled:hover {
    background: transparent;
}

.fill_button {
    border: 0;
    border-radius: 4px;
    color: #f6f7ff;
    background: #405aff;
    padding: 0;
    margin: 0 2px;
    padding: 6px 12px;
    font: normal normal 12px/14px "Work Sans", sans-serif;
}

.fill_button:hover {
    background: #2840dd;
}

.fill_button:disabled {
    color: #a9aab5;
    background: #444759;
}

.fill_button:disabled:hover {
    color: #a9aab5;
    background: #444759;
}

#schedule_box {
    flex-grow: 1;
    overflow: auto;
}

#timeline {
    min-width: fit-content;
    padding: 25px 20px 30px 20px;
}

.solving_status {
    width: 350px;
    padding: 16px 12px;
    margin: 0 auto;
    color: #aeb0be;
    background: #272936;
    border-radius: 4px;
    border: 1px solid #333445;
    font: normal normal 12px/14px "Work Sans", sans-serif;
}

.solving_status h1 {
    color: #717383;
    color: #cccedb;
    text-align: center;
    margin: 4px 0;
    font: normal normal 18px/20px "Work Sans", sans-serif;
}

.solving_status h2 {
    color: #c0c2d0;
    text-align: center;
    padding: 8px;
    margin: 4px 0;
    border-bottom: 1px solid #1c1d27;
    font: normal normal 14px/16px "Work Sans", sans-serif;
}

.solving_status p {
    text-align: center;
}

#title_bar {
    margin: 0 auto;
    padding-bottom: 15px;
}

#title {
    cursor: text;
    color: #aeb0be;
    margin: 0 auto;
    padding: 3px 4px;
    width: fit-content;
    user-select: none;
    font: normal normal 18px/22px "Work Sans", sans-serif;
}

#title_edit_box {
    color: #aeb0be;
    margin: 0 auto;
    display: block;
    background: #272936;
    border: 1px solid #405aff;
    padding: 2px 4px;
    border-radius: 2px;
    width: fit-content;
    font: normal normal 18px/22px "Work Sans", sans-serif;
}

.pen_icon {
    color: #4e5164;
    margin-left: 4px;
    font: normal normal 10px/12px "Work Sans", sans-serif;
}

#title_edit_box:focus {
    outline: none;
}

#timestamps {
    display: table;
    margin: 0 auto;
    white-space: nowrap;
    padding-left: 130px;
}

#timestamps span {
    width: 40px;
    color: #717383;
    display: inline-block;
    text-align: center;
    font: normal normal 12px/18px "Work Sans", sans-serif;
}

#timestamps span.fullhour {
    color: #aeb0be;
}

#timeline_canvas {
    display: table;
    margin: 0 auto;
    padding: 0 20px;
    position: relative;
}

#timeline_canvas .head_row {
    height: 14px;
    white-space: nowrap;
}

#timeline_canvas .row {
    height: 60px;
    white-space: nowrap;
}

#timeline_canvas .head_trainer {
    width: 129px;
    height: 13px;
    vertical-align: top;
    display: inline flow-root;
    border-right: 1px solid #333445;
    border-bottom: 1px solid #333445;
}

#timeline_canvas .head_cell {
    width: 39px;
    height: 13px;
    vertical-align: top;
    display: inline flow-root;
    border-right: 1px solid #333445;
    border-bottom: 1px solid #333445;
}

#timeline_canvas .trainer_name {
    width: 113px;
    color: #aeb0be;
    text-align: left;
    vertical-align: top;
    padding: 22px 0 22px 16px;
    display: inline flow-root;
    border-right: 1px solid #333445;
    border-bottom: 1px solid #333445;
    font: normal normal 13px/15px "Work Sans", sans-serif;
}

#timeline_canvas .cell {
    width: 39px;
    height: 59px;
    vertical-align: top;
    display: inline flow-root;
    border-right: 1px solid #333445;
    border-bottom: 1px solid #333445;
}

.time_helper {
    height: 53px;
    display: none;
    border: 1px solid rgba(64, 90, 255, 0.7);
    position: absolute;
    border-radius: 6px;
    background: rgba(64, 90, 255, 0.3);
}

.timeslot {
    width: 80px;
    height: 49px;
    color: #1c1d27;
    background: #272936;
    border: 1px solid #717383;
    border-radius: 4px;
    position: absolute;
    touch-action: none;
    user-select: none;
    top: 17px;
    left: 101px;
}

.timeslot.collision {
    border-color: #d64343;
}

.timeslot:hover {
    cursor: move;
}

.timeslot .fixed {
    color: #717383;
    text-align: center;
    padding: 17px 0 18px 0;
    font: normal normal 11px/13px "Work Sans", sans-serif;
}

.timeslot .name {
    color: #aeb0be;
    text-align: center;
    padding: 2px 0 0 0;
    font: normal normal 11px/13px "Work Sans", sans-serif;
}

.timeslot .soloname {
    color: #aeb0be;
    text-align: center;
    padding: 9px 0 8px 0;
    font: normal normal 11px/13px "Work Sans", sans-serif;
}

.timeslot .label {
    color: #717383;
    text-align: center;
    padding: 0 0 2px 0;
    font: normal normal 11px/13px "Work Sans", sans-serif;
}

.timeslot .equipment {
    text-align: center;
    border-radius: 0 0 2px 2px;
    margin: 0 1px 1px 1px;
    font: normal normal 11px/13px "Work Sans", sans-serif;
    padding: 2px 4px 3px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

@keyframes progress-anim {
    0%     { box-shadow: #4e5164 -11px 6px 0 3px, #4e5164 -11px 6px 0 3px; }
    16.67% { box-shadow: #4e5164 -11px 6px 0 3px, #4e5164  11px 6px 0 3px; }
    33.33% { box-shadow: #4e5164 -11px 6px 0 3px, #4e5164 -11px 6px 0 3px; }
    50%    { box-shadow: #4e5164  11px 6px 0 3px, #4e5164  11px 6px 0 3px; }
    66.67% { box-shadow: #4e5164  11px 6px 0 3px, #4e5164 -11px 6px 0 3px; }
    83.33% { box-shadow: #4e5164  11px 6px 0 3px, #4e5164  11px 6px 0 3px; }
    100%   { box-shadow: #4e5164 -11px 6px 0 3px, #4e5164 -11px 6px 0 3px; }
}

.progress-anim:not(:required) {
    margin: 4px auto 16px;
    overflow: hidden;
    position: relative;
    text-indent: -9999px;
    width: 2px;
    height: 2px;
    background: transparent;
    border-radius: 100%;
    box-shadow: #4e5164 -11px 6px 0 3px, #4e5164 -11px 6px 0 3px;
    animation: progress-anim 3.5s infinite ease-in-out;
    transform-origin: 50% 50%;
}

